tests/fixtures/invalid/bytes_lt_dict.py
# Cannot compare with < Bytes and Dict[str, int]
x: bool = b"hello" < {"a": 1}
